[package]
name = "raui"
version = "0.70.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2024"
description = "Renderer Agnostic User Interface"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]
exclude = [
  ".github/**",
  "demos/**",
  "media/**",
  "site/**",
  "examples/resources/**",
]

[features]
material = ["raui-material"]
retained = ["raui-retained"]
immediate = ["raui-immediate"]
immediate-widgets = ["raui-immediate-widgets"]
json = ["raui-json-renderer"]
tesselate = ["raui-tesselate-renderer"]
app = ["raui-app"]
all = [
  "material",
  "retained",
  "immediate",
  "immediate-widgets",
  "tesselate",
  "json",
  "app",
]
import-all = []

[dependencies]
raui-core = { path = "./raui-core", version = "0.70" }

[dependencies.raui-material]
path = "./raui-material"
version = "0.70"
optional = true

[dependencies.raui-retained]
path = "./raui-retained"
version = "0.70"
optional = true

[dependencies.raui-immediate]
path = "./raui-immediate"
version = "0.70"
optional = true

[dependencies.raui-immediate-widgets]
path = "./raui-immediate-widgets"
version = "0.70"
optional = true

[dependencies.raui-json-renderer]
path = "./raui-json-renderer"
version = "0.70"
optional = true

[dependencies.raui-tesselate-renderer]
path = "./raui-tesselate-renderer"
version = "0.70"
optional = true

[dependencies.raui-app]
path = "./raui-app"
version = "0.70"
optional = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raui-core = { path = "./raui-core" }
raui-immediate = { path = "./raui-immediate" }
raui-immediate-widgets = { path = "./raui-immediate-widgets" }
raui-retained = { path = "./raui-retained" }
raui-app = { path = "./raui-app" }
raui-json-renderer = { path = "./raui-json-renderer" }

[workspace]
members = ["raui-*", "demos/*", "site/rust/guide_*"]
resolver = "2"

[package.metadata.docs.rs]
features = ["all"]
