[package]
name = "raui-app"
version = "0.64.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "RAUI application layer to focus only on making UI"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.64" }
raui-material = { path = "../raui-material", version = "0.64" }
raui-immediate = { path = "../raui-immediate", version = "0.64" }
raui-retained = { path = "../raui-retained", version = "0.64" }
raui-tesselate-renderer = { path = "../raui-tesselate-renderer", version = "0.64" }
spitfire-glow = "0.29"
spitfire-fontdue = "0.29"
bytemuck = { version = "1", features = ["derive"] }
glutin = "0.28"
fontdue = "0.9"
image = "0.25"
vek = "0.17"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
