[package]
name = "raui-app"
version = "0.67.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2024"
description = "RAUI application layer to focus only on making UI"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.67" }
raui-material = { path = "../raui-material", version = "0.67" }
raui-immediate = { path = "../raui-immediate", version = "0.67" }
raui-retained = { path = "../raui-retained", version = "0.67" }
raui-tesselate-renderer = { path = "../raui-tesselate-renderer", version = "0.67" }
spitfire-glow = "0.32"
spitfire-fontdue = "0.32"
bytemuck = { version = "1", features = ["derive"] }
glutin = "0.28"
fontdue = "0.9"
image = "0.25"
vek = "0.17"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
