[package]
name = "raui-capi"
version = "0.22.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "RAUI bindings for C language"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/PsichiX/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.22" }
lazy_static = "1.4"
libc = "0.2"

[lib]
name = "raui_capi"
crate-type = ["cdylib", "staticlib"]
