[package]
name = "raui-core"
version = "0.42.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "Renderer Agnostic User Interface"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[features]
scalar64 = []
integer64 = []

[dependencies]
raui-derive = { version = "0.42", path = "../raui-derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
intuicio-data = "0.23"
