[package]
name = "raui-core"
version = "0.54.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "RAUI application layer"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-derive = { version = "0.54", path = "../raui-derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
intuicio-data = "0.23"
