[package]
name = "raui-ggez-renderer"
version = "0.32.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "RAUI renderer for GGEZ game engine"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/PsichiX/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.32" }
serde = { version = "1", features = ["derive"] }
ggez = "0.5"
