[package]
name = "raui-immediate-widgets"
version = "0.46.3"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "Widgets library for RAUI immediate mode UI layer"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.46" }
raui-material = { path = "../raui-material", version = "0.46" }
raui-immediate = { path = "../raui-immediate", version = "0.46" }
serde = { version = "1", features = ["derive"] }
