[package]
name = "raui-immediate"
version = "0.69.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2024"
description = "RAUI immediate mode UI layer"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.69" }
serde = { version = "1", features = ["derive"] }
