[package]
name = "raui-json-renderer"
version = "0.68.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2024"
description = "RAUI renderer for JSON format"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.68" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
