[package]
name = "raui-material"
version = "0.58.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "Material components library for RAUI"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.58" }
serde = { version = "1", features = ["derive"] }
