[package]
name = "raui-quick-start"
version = "0.38.4"
authors = ["zicklag"]
edition = "2018"
description = "RAUI quick start module for easier playground experience"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui = { version = "0.38", path = "../" }
raui-tetra-renderer = { version = "0.38", path = "../raui-tetra-renderer" }
tetra = { version = "0.6", features = ["sdl2_bundled"] }
derive_builder = "0.10.2"
