[package]
name = "raui-tesselate-renderer"
version = "0.65.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "RAUI renderer that tesselates layout into vertex and index buffers"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[features]
index32 = []

[dependencies]
raui-core = { path = "../raui-core", version = "0.65" }
serde = { version = "1", features = ["derive"] }
vek = "0.17"
spitfire-core = "0.30"
spitfire-fontdue = "0.30"
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.9"
