[package]
name = "raui-tetra-renderer"
version = "0.38.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "RAUI renderer for Tetra game engine"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.38" }
serde = { version = "1", features = ["derive"] }
tetra = { version = "0.6", default-features = false, features = ["texture_png", "font_ttf"] }

[dependencies.raui-tesselate-renderer]
path = "../raui-tesselate-renderer"
version = "0.38"
features = ["index32"]
