[package]
name = "raui-yaml-renderer"
version = "0.12.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "RAUI renderer for YAML format"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/PsichiX/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../raui-core", version = "0.12" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
