[package]
name = "raui-core"
version = "0.70.11"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2024"
description = "RAUI application layer"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-derive = { version = "0.70", path = "../derive" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
intuicio-data = "0.48"
