[package]
name = "raui-immediate-widgets"
version = "0.70.11"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2024"
description = "Widgets library for RAUI immediate mode UI layer"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RAUI-labs/raui"
keywords = ["renderer", "agnostic", "ui", "interface", "gamedev"]
categories = ["gui", "rendering::graphics-api"]

[dependencies]
raui-core = { path = "../core", version = "0.70" }
raui-material = { path = "../material", version = "0.70" }
raui-immediate = { path = "../immediate", version = "0.70" }
serde = { version = "1", features = ["derive"] }
