[package]
name = "guide"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The sdl2_bundled feature tells the crate to download and install SDL2 so you
# don't have to have it installed
tetra = { version = "0.6", features = ["sdl2_bundled"] }
raui = { version = "0.34", path = "../../" }
raui-tetra-renderer = { version = "0.34", path = "../../raui-tetra-renderer" }
