[package]
name = "hello-world"
version = "0.1.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
tetra = { version = "0.6", features = ["sdl2_bundled"] }
raui-core = { version = "0.29", path = "../../raui-core" }
raui-tetra-renderer = { version = "0.29", path = "../../raui-tetra-renderer" }
