[package]
name = "in-game"
version = "0.1.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ggez = "0.5"
raui-core = { version = "0.23", path = "../../raui-core" }
raui-material = { version = "0.23", path = "../../raui-material" }
raui-ggez-renderer = { version = "0.23", path = "../../raui-ggez-renderer" }
lipsum = "0.7"
