[package]
name = "in-game"
version = "0.1.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tetra = { version = "0.6", features = ["sdl2_bundled"] }
raui-core = { version = "0.38", path = "../../raui-core" }
raui-material = { version = "0.38", path = "../../raui-material" }
raui-tetra-renderer = { version = "0.38", path = "../../raui-tetra-renderer" }
lipsum = "0.7"
